# motordelco-o

./: .gitignore  README.md  api.py  dashboard_3d.py  pyproject.toml  requirements.txt  scrape_all.py
.claude/: settings.local.json
cercha/: __init__.py  compat.py  config.py  judge.py  main.py  migrate.py  pipeline.py  vectorizer.py
data/: auditoria_tornillos.csv  cerebro_sodimac.pkl  clusters_reporte.json  clusters_visualizacion.xlsx  express_100_revisar.xlsx  golden_set.json  golden_set_reporte.json  matches_candidatos.json  matches_revisar.xlsx  matches_top.json  matches_v2_candidatos.json  matches_v2_revisar.xlsx  matches_v2_top.json  matches_v2_vs_v1.json  modelo_matcher_reporte.json  modelo_matcher_v2_reporte.json  solo_tornillos.json  tornillos_catalogo_completo.json  tornillos_catalogo_profundo.json  tornillos_normalizados_completo.json  tornillos_para_vectores.json  weak_labels.json  weak_labels_reporte.json  weak_labels_visualizacion.xlsx
data2/: cerebro_easy.pkl  tornillos_easy_crudo.json  tornillos_easy_profundo.json  tornillos_easy_vectores.json
scripts/: _analizar_dudosos.py  _check_norm_v3.py  _check_vectorizado.py  analizar_clusters.py  analyze_catalogs.py  audit_deep.py  audit_final.py  audit_scan.py  check_integrity.py  exportar_clusters_excel.py  exportar_easy_excel.py  exportar_express_100.py  exportar_matches_excel.py  exportar_matches_v2_excel.py  exportar_normalizado_easy_excel.py  exportar_normalizado_sodimac_excel.py  exportar_sodimac_excel.py  exportar_weak_labels_excel.py  fix_profundo_sodimac.py  inspect_html_dump.py  (+1 more)
(+43 files in other folders)
